# NCPiSelection

./: .gitignore  CMakeLists.txt  setup.sh
bdts/: bdt_MuonPion.json  bdt_MuonPion_1.0.json  bdt_MuonPion_classic_v1.json  bdt_MuonPion_v3.json
bdts/.ipynb_checkpoints/: bdt_MuonPion-checkpoint.json
fsiweights/: fsi_weights_cc_piminus.root  fsi_weights_cc_piplus.root  fsi_weights_nc_piminus.root  fsi_weights_nc_piplus.root
include/: BDTTool.h  CreateTrainingTree.h  EventContainer.h  Hypfit.h  PhysdEdx.h  Selection.h  SelectionDriver.h  StackedHistTool.h  Utility.h
scripts/: files_to_process.txt  reprocess.sh
src/: AnalyseNCPi.cxx  BDTTool.cxx  CreateTrainingTree.cxx  EventContainer.cxx  Hypfit.C  PhysdEdx.C  ProcessNTuple.cxx  Selection.cxx  SelectionDriver.cxx  StackedHistTool.cxx
